[package]
name = "deptr"
version = "0.4.0"
edition = "2021"
description = "A dependency tracker to identify unused dependencies in projects"
authors = ["Sam Atkins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rustpython-parser = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
