[tool.poetry]
name = "example"
version = "0.1.0"
description = "this is an example pyproject file for testing"
authors = ["Sam Atkins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^1.10.9"
# email-validator is a dependency of pydantic
email-validator = "^1.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
